--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-C7VAEJJ;Database=Bulky;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-C7VAEJJ;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True;"
 
   }
 }
